SCRUM-77 fix alignment issues

--- a/vests/static/css/home-styles.css
+++ b/vests/static/css/home-styles.css
@@ -9,19 +9,6 @@ body {
 .element {
     overflow: auto;
 }
-.container1 {
-    position: static;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin: auto;
-    color: #FFFFFF;
-    background-color: #424041; /* Change the color to gray */
-    height: 60px;
-    align-items: center;
-    padding-right: 0;
-    margin-right: 0;
-}
 
 .left {
     display: flex;
