--- a/vests/static/css/payment-styles.css
+++ b/vests/static/css/payment-styles.css
@@ -9,35 +9,9 @@ body {
 .element {
     overflow: auto;
 }
-.container1 {
-    position: static;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin: auto;
-    background-color: #555555;
-    align-items: center;
-    padding-right: 0;
-    margin-right: 0;
-}
-.left {
-    display: flex;
-    margin-left: 2%;
-}
-.right {
-    display: flex;
-    margin-right: 12%;
-}
-.left a {
-    margin-right: 30%;
-}
-.right a {
-    margin-left: 20%;
-}
 .navbar {
     position: fixed;
     top: 0;
-    height: 60px;
     width: 100%;
     z-index: 1000;
 }
@@ -45,7 +19,6 @@ body {
 .navbar,
 .footer {
     background-color: #424041;
-    /* This is the gray color */
 }
 .logo {
     height: 25px; /* Adjust to your liking */
@@ -55,22 +28,15 @@ body {
 }
 .form-container {
     display: flex;
-    /* flex-direction: column; */
     align-items: center;
     justify-content: center;
-    height: 70vh; /* Reduced from 100vh to 90vh */
-    /* padding: 20px; */
-    /* box-sizing: border-box; */
-    /* margin-bottom: 0px; */
+    height: 70vh; 
 }
 form {
-    /* background-color: #f8f8f8; */
     padding: 20px; 
     border-radius: 8px; 
-    /* box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1); */
     width: 100%;
     max-width: 500px;
-    
 }
 
 input[type="text"]{
@@ -82,9 +48,6 @@ input[type="text"]{
     color: white;
     font-size: 25px;
 }
-.navbar {
-    padding: 0.25rem 0.1rem; /* Adjust this value to reduce/increase the height */
-} 
 .donate-link {
     background: none;
     border: none;
@@ -98,12 +61,7 @@ input[type="text"]{
         flex-direction: column; /* Change flex-direction to column */
         height: auto; /* Remove fixed height */
     }
-    .navbar-nav {
-        text-align: left;
-    }
-    .navbar-nav .nav-item {
-        flex-grow: 0.5;
-    }
+    
     .paypal {
         margin: 20px auto; /* Adjust margin for center alignment */
         width: 100%; /* Make the button width 100% */
@@ -111,27 +69,13 @@ input[type="text"]{
     }
 }
 
-
 @media only screen and (min-width: 769px) {
     .paypal {
         margin-left: 150px; 
         width:350px;
     }
-    .navbar-nav {
-        text-align: center;
-    }
-    .navbar-nav .nav-item {
-        flex-grow: 1;
+    .navbar{
+        height: 60px;
     }
 }
 
-.payment-navbar {
-    height: 60px; /* Adjust this value to match the navbar height in other pages */
-}
-.navbar-brand {
-    margin-left: 0.5rem; /* Adjust this value to move the logo closer to the Home link */
-}
-
-.cart-icon-container {
-    margin-left: 1rem; /* Adjust this value to move the cart icon to the right */
-}
